WIP - Fix compilation problems